Add comment storing to API
